--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,12 +5,12 @@ authors = ["James Forcier <csssuf@csssuf.net>"]
 edition = "2018"
 
 [dependencies]
-failure = "0.1"
-openidconnect = { git = "https://github.com/csssuf/openidconnect-rs", branch = "ring-0.11" }
-oauth2 = { git = "https://github.com/ramosbugs/oauth2-rs.git", branch = "master" }
-rocket = "0.3.17"
-rocket_codegen = "0.3.17"
+failure = "0.1.8"
+openidconnect = "2.1.2"
+oauth2 = {version="4.1.0", features=["reqwest"]}
+rocket = {version="0.5.0-rc.1", features = ["secrets", "json"]}
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
-url = "1.0"
+url = "2.2.2"
+reqwest = "0.11.8"
